Mark the mod as supporting 1.15

--- a/build.gradle
+++ b/build.gradle
@@ -62,20 +62,22 @@ jar {
 curseforge {
 	apiKey = project.hasProperty("curseForgeApiKey") ? project.curseForgeApiKey : "empty"
 	project {
-		id = '406220'
+		id = '000000'
 		changelog = file('changelog.txt')
 		releaseType = 'release'
 		addGameVersion '1.16.3'
 		addGameVersion '1.16.2'
+		addGameVersion '1.16.1'
+		addGameVersion '1.16'
+		addGameVersion '1.15.2'
+		addGameVersion '1.15.1'
+		addGameVersion '1.15'
 		addGameVersion 'Java 8'
 		addGameVersion 'Fabric'
 		mainArtifact(new File(new File(buildDir, "libs"), "$archivesBaseName-${version}.jar")) {
 			displayName = "$archivesBaseName-$version"
 			relations {
 				requiredDependency 'fabric-api'
-				embeddedLibrary 'cloth-config'
-				embeddedLibrary 'auto-config-updated-api'
-				optionalDependency 'modmenu'
 			}
 		}
 	}
