--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,11 @@ curseforge {
 		addGameVersion '1.15.2'
 		addGameVersion '1.15.1'
 		addGameVersion '1.15'
+		addGameVersion '1.14.4'
+		addGameVersion '1.14.3'
+		addGameVersion '1.14.2'
+		addGameVersion '1.14.1'
+		addGameVersion '1.14'
 		addGameVersion 'Java 8'
 		addGameVersion 'Fabric'
 		mainArtifact(new File(new File(buildDir, "libs"), "$archivesBaseName-${version}.jar")) {
