--- a/build.gradle
+++ b/build.gradle
@@ -67,15 +67,25 @@ curseforge {
 		releaseType = 'release'
 		addGameVersion '1.16.3'
 		addGameVersion '1.16.2'
+		addGameVersion '1.16.1'
+		addGameVersion '1.16'
+		addGameVersion '1.16-snapshot'
+		addGameVersion '1.15.2'
+		addGameVersion '1.15.1'
+		addGameVersion '1.15'
+		addGameVersion '1.15-snapshot'
+		addGameVersion '1.14.4'
+		addGameVersion '1.14.3'
+		addGameVersion '1.14.2'
+		addGameVersion '1.14.1'
+		addGameVersion '1.14'
+		addGameVersion '1.14-snapshot'
 		addGameVersion 'Java 8'
 		addGameVersion 'Fabric'
 		mainArtifact(new File(new File(buildDir, "libs"), "$archivesBaseName-${version}.jar")) {
 			displayName = "$archivesBaseName-$version"
 			relations {
 				requiredDependency 'fabric-api'
-				embeddedLibrary 'cloth-config'
-				embeddedLibrary 'auto-config-updated-api'
-				optionalDependency 'modmenu'
 			}
 		}
 	}
