--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,14 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	maven {
+	/*maven {
 		name 'Cloth Config'
 		url 'https://maven.shedaniel.me/'
 	}
 	maven {
 		name 'Terraformers Backup'
 		url 'https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/'
-	}
+	}*/
 	flatDir { dirs 'lib' }
 }
 
@@ -36,8 +36,8 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
-	modCompileOnly "dev.the-fireplace:Fireplace-Lib:${project.fireplacelib_version}:api"
-	modRuntime "dev.the-fireplace:Fireplace-Lib:${project.fireplacelib_version}"
+	//modCompileOnly "dev.the-fireplace:Fireplace-Lib:${project.fireplacelib_version}:api"
+	//modRuntime "dev.the-fireplace:Fireplace-Lib:${project.fireplacelib_version}"
 
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 }
