--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ import com.modrinth.minotaur.TaskModrinthUpload
 if (hasProperty('modrinthApiKey')) {
 	task publishModrinth(type: TaskModrinthUpload) {
 		token = modrinthApiKey
-		projectId = '00000000'
+		projectId = 'qp6VHA4K'
 		versionNumber = version
 		versionName = project.mod_version
 		uploadFile = new File(new File(buildDir, "libs"), "$archivesBaseName-${version}.jar")
